--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ requests~=2.28.1
 datetime~=4.9
 json5~=0.9.10
 tenacity~=8.1.0
-shimoku-components-catalog~=0.2
+shimoku-components-catalog==0.2.1
 tqdm~=4.64.1
 psutil~=5.9.4
 aiohttp~=3.8.3
