--- a/setup.cfg
+++ b/setup.cfg
@@ -4,15 +4,15 @@
 
 [metadata]
 name = shimoku-api-python
-description = Add a short description here!
-author = capitan-ariete
-author-email = sergi.ortiz.rodriguez@gmail.com
+description = Shimoku enables you to build Data Products in just hours and allows you to create Predictive Analytics Products with Artificial Intelligence capabilities.
+author = Shimoku
+author-email = contact@shimoku.com
 license = mit
-long-description = file: README.rst
+long-description = file: README.md
 long-description-content-type = text/x-rst; charset=UTF-8
-url = https://github.com/pyscaffold/pyscaffold/
+url = https://github.com/shimoku-tech/shimoku-api-python
 project-urls =
-    Documentation = https://pyscaffold.org/
+    Documentation = https://docs.shimoku.com/
 # Change if running only on Windows, Mac or Linux (comma-separated)
 platforms = any
 # Add here all kinds of additional classifiers as defined under
