--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -2,8 +2,6 @@ name: Publish to PyPI
 
 on:
   push:
-    branches:
-      - master
     tags:
       - '*'
     paths:
@@ -11,21 +9,20 @@ on:
       - 'setup.py'
       - 'setup.cfg'
       - 'requirements.txt'
-
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
       - name: Check out repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       - name: Set up Python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v3
         with:
           python-version: 3.x
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install wheel twine
+          pip install setuptools setuptools_scm wheel twine
       - name: Build package
         run: python3 setup.py sdist bdist_wheel
       - name: Publish to PyPI
