--- a/.github/workflows/publish-testpypi.yml
+++ b/.github/workflows/publish-testpypi.yml
@@ -1,14 +1,8 @@
-name: Publish to PyPI
-
+name: Publish to TestPyPI
 on:
   push:
-    tags:
-      - '*'
-    paths:
-      - 'src/**'
-      - 'setup.py'
-      - 'setup.cfg'
-      - 'requirements.txt'
+    branches:
+      - 'release/*'
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -24,9 +18,11 @@ jobs:
           python -m pip install --upgrade pip
           pip install setuptools setuptools_scm wheel twine
       - name: Build package
-        run: python3 setup.py sdist bdist_wheel
-      - name: Publish to PyPI
+        run: |
+          export GITHUB_REF=${{ github.ref }}
+          python3 setup.py sdist bdist_wheel
+      - name: Publish to TestPyPI
         env:
-          TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
-          TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
-        run: twine upload dist/*
+          TWINE_USERNAME: ${{ secrets.TEST_PYPI_USERNAME }}
+          TWINE_PASSWORD: ${{ secrets.TEST_PYPI_PASSWORD }}
+        run: twine upload --repository-url https://test.pypi.org/legacy/ dist/*
