--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -24,7 +24,8 @@ jobs:
           python -m pip install --upgrade pip
           pip install setuptools setuptools_scm wheel twine
       - name: Build package
-        run: python3 setup.py sdist bdist_wheel
+        run: |
+          python3 setup.py sdist bdist_wheel
       - name: Publish to PyPI
         env:
           TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
