--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-pandas~=1.5.2
-requests~=2.28.1
+pandas~=2.1.3
+requests~=2.31.0
 datetime~=4.9
 json5~=0.9.10
 tenacity~=8.1.0
@@ -8,3 +8,13 @@ tqdm~=4.64.1
 psutil~=5.9.4
 aiohttp~=3.8.3
 ipython>=8.10
+uvicorn~=0.23.2
+graphene~=3.3
+urllib3~=1.26.13
+pydantic~=2.4.2
+strawberry-graphql~=0.198.0
+starlette_graphene3~=0.6.0
+fastapi~=0.103.2
+websockets~=11.0.3
+python-dateutil~=2.8.2
+uvloop~=0.19.0
