--- a/setup.cfg
+++ b/setup.cfg
@@ -60,6 +60,8 @@ install_requires =
     fastapi~=0.103.2
     websockets~=11.0.3
     python-dateutil~=2.8.2
+    black~=23.11.0
+    deepdiff~=6.7.1
 
 [options.packages.find]
 where = src
