--- a/setup_browser.cfg
+++ b/setup_browser.cfg
@@ -4,7 +4,7 @@
 # https://setuptools.pypa.io/en/latest/references/keywords.html
 
 [metadata]
-name = shimoku
+name = shimoku-browser
 description = Shimoku enables you to build Data Products in just hours and allows you to create Predictive Analytics Products with Artificial Intelligence capabilities.
 author = Shimoku
 author_email = contact@shimoku.com
@@ -41,56 +41,15 @@ python_requires = >=3.9
 # For more information, check out https://semver.org/.
 install_requires =
     importlib-metadata
-    pandas~=2.1.3
+    pandas==1.5.3
     shimoku-components-catalog>=0.2.1
+    setuptools>=58.0.4
     json5~=0.9.10
-    requests~=2.31.0
-    datetime~=4.9
-    tqdm~=4.64.1
-    psutil~=5.9.4
-    aiohttp>=3.9.2
-    ipython>=8.10
-    uvicorn~=0.23.2
-    graphene~=3.3
-    urllib3~=1.26.13
-    pydantic~=2.4.2
-    strawberry-graphql~=0.198.0
-    starlette_graphene3~=0.6.0
-    fastapi>=0.109.1
-    websockets~=11.0.3
-    python-dateutil~=2.8.2
-    rich~=13.7.0
-    black~=23.11.0
-    deepdiff~=6.7.1
-    psutil~=5.9.7
 
 [options.packages.find]
 where = src
 exclude =
     tests
-
-[options.entry_points]
-console_scripts =
-    shimoku = shimoku.cli.main:main
-
-[tool:pytest]
-# Specify command line options as you would do when invoking pytest directly.
-# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
-# in order to write a coverage file that can be read by Jenkins.
-# CAUTION: --cov flags may prohibit setting breakpoints while debugging.
-#          Comment those flags to avoid this pytest issue.
-addopts =
-    --cov shimoku --cov-report term-missing
-    --verbose
-norecursedirs =
-    dist
-    build
-    .tox
-testpaths = tests
-# Use pytest markers to select/deselect specific tests
-# markers =
-#     slow: mark tests as slow (deselect with '-m "not slow"')
-#     system: mark end-to-end system tests
 
 [devpi:upload]
 # Options for the devpi: PyPI server and packaging tool
