--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -24,6 +24,15 @@ jobs:
       - name: Check out repository
         uses: actions/checkout@v3
 
+      - name: Set version environment variable
+        run: |
+          if [[ $GITHUB_REF == refs/tags/* ]]; then
+            VERSION=${GITHUB_REF#refs/tags/}
+          else
+            VERSION=0.0.0
+          fi
+          echo "PACKAGE_VERSION=$VERSION" >> $GITHUB_ENV
+
       - name: Set up Python
         uses: actions/setup-python@v3
         with:
@@ -39,10 +48,6 @@ jobs:
           if [ "${{ matrix.config-file }}" != "setup.cfg" ]; then
             cp ${{ matrix.config-file }} setup.cfg
           fi
-
-      - name: Extract the latest tag name
-        id: get_version
-        run: echo "SHIMOKU_VERSION=$(git describe --tags --abbrev=0)" >> $GITHUB_ENV
 
       - name: Build the package
         run: python -m build
