Actions can be created

--- a/setup.cfg
+++ b/setup.cfg
@@ -63,6 +63,7 @@ install_requires =
     black~=23.11.0
     deepdiff~=6.7.1
     psutil~=5.9.7
+    watchdog~=4.0.0
 
 [options.packages.find]
 where = src
