--- a/setup.cfg
+++ b/setup.cfg
@@ -41,7 +41,7 @@ python_requires = >=3.9
 # For more information, check out https://semver.org/.
 install_requires =
     importlib-metadata
-    pandas~=2.1.3
+    pandas>=2.2.2
     shimoku-components-catalog>=0.2.1
     json5~=0.9.10
     requests~=2.31.0
